--- a/src/Principal/Main.form
+++ b/src/Principal/Main.form
@@ -28,11 +28,11 @@
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="32767" attributes="0"/>
-                      <Component id="jButton3" min="-2" pref="184" max="-2" attributes="0"/>
+                      <Component id="B_cargar" min="-2" pref="184" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="64" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" pref="184" max="-2" attributes="0"/>
+                      <Component id="B_generar" min="-2" pref="184" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
-                      <Component id="jButton2" min="-2" pref="184" max="-2" attributes="0"/>
+                      <Component id="B_Salir" min="-2" pref="184" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="141" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -43,9 +43,9 @@
                       <Component id="jScrollPane1" min="-2" pref="225" max="-2" attributes="0"/>
                       <EmptySpace pref="51" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton2" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Component id="jButton3" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="B_generar" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="B_Salir" alignment="3" min="-2" max="-2" attributes="0"/>
+                          <Component id="B_cargar" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                   </Group>
@@ -119,17 +119,17 @@
                 </Component>
               </SubComponents>
             </Container>
-            <Component class="javax.swing.JButton" name="jButton1">
+            <Component class="javax.swing.JButton" name="B_generar">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Generar Rol"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton2">
+            <Component class="javax.swing.JButton" name="B_Salir">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Salir"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JButton" name="jButton3">
+            <Component class="javax.swing.JButton" name="B_cargar">
               <Properties>
                 <Property name="text" type="java.lang.String" value="Cargar Rol"/>
               </Properties>
